Added listclosedchannels command
